--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
       <meta name="Description" content="Cowsay and Fortune in the form of URL based input!" />
       <meta name="KeyWords" content="cowsay,fortune,development, operations" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
-      <link rel="stylesheet" href="https://xplosivex.github.io/ConfessionBooth/Pagefiles/CSS/csssheet.css" />
-    </head>
-        <title>{{ title }}</title>
+      <link rel="stylesheet" href="https://raw.githubusercontent.com/XplosiveX/webfortune/main/sheet.css" />
     </head>
     <body>
         <pre>{{ return }}</pre>
