--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-      <link rel="shortcut icon" type="image/x-icon" href="https://xplosivex.github.io/ConfessionBooth/Pagefiles/Images/booth.ico" />
+      <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/XplosiveX/webfortune/main/sacred-cow.svg" />
       <meta name="Description" content="Cowsay and Fortune in the form of URL based input!" />
       <meta name="KeyWords" content="cowsay,fortune,development, operations" />
       <meta name="viewport" content="width=device-width, initial-scale=1" />
